--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Crédits | Cabinet Fiscal Expert">
+<Layout title="Crédits | SCP Crouzatier Yves / Pobéda-Thomas Florence">
   <main class="py-20 px-4 sm:px-6 lg:px-8 max-w-5xl mx-auto">
     <div class="mb-12 text-center">
       <h1 class="text-4xl font-bold text-gray-900 welcome-font mb-4">
@@ -17,16 +17,16 @@ import Layout from "../layouts/Layout.astro";
           Conception et développement
         </h2>
         <p>
-          Le site web du Cabinet Fiscal Expert a été conçu et développé par :
+          Le site web de la SCP Crouzatier Yves / Pobéda-Thomas Florence a été
+          conçu et développé par :
         </p>
         <ul>
           <li>
-            <strong>Conception et design :</strong> [Nom de l'agence ou du designer]
+            <strong>Conception et développement :</strong> Growth Web Stratégie
           </li>
           <li>
-            <strong>Développement :</strong> [Nom de l'agence ou du développeur]
+            <strong>SIRET :</strong> 94335043900015
           </li>
-          <li><strong>Hébergement :</strong> [Nom de l'hébergeur]</li>
         </ul>
       </section>
 
@@ -77,7 +77,7 @@ import Layout from "../layouts/Layout.astro";
         </h2>
         <p>
           Les éléments graphiques utilisés sur ce site proviennent des sources
-          suivantes :
+          suivantes : magicui, heroicons, lucide, unsplash, pexels, undraw, manypixels
         </p>
 
         <h3 class="text-xl font-semibold text-gray-700 welcome-font mb-2 mt-6">
@@ -212,6 +212,7 @@ import Layout from "../layouts/Layout.astro";
           Un merci particulier à nos clients pour leur confiance et leur
           fidélité.
         </p>
+        <p>Dernière mise à jour : Mai 2025</p>
       </section>
     </div>
   </main>
